Added minimal develop,run description to README

--- a/README
+++ b/README
@@ -1,2 +1,27 @@
 SEE Framework README 
 ====================
+
+RUN
+===
+
+1)	sh run.sh
+
+
+DEVELOP
+=======
+
+*Prerequisite:
+-JAVA6+
+-Maven 2.x.x
+-Git
+
+*Optional:
+-Eclipse
+-m2eclipse
+
+1)	Execute "git clone ssh://<username>@demo.sti2.at/var/scm/see/see-invoker.git" 
+	in your workspace folder, replace <username> with your account name on demo.sti2.at
+
+2)	Eclipse as IDE:
+		a) Install m2eclipse plugin
+		b) Import folders as maven projects (File->Import->Maven->Existing Maven Projects)
