All default.properties files are now rewritten by the main pom file (centralized configuration )

--- a/README
+++ b/README
@@ -8,14 +8,11 @@ COMPONENTS
 * Registration
 * Discovery
 * Monitoring
+* Ranking
+* Management
 * Utilities
 
-RUN
-===
 
-Starts the invoker web service:
-
-1)	sh run.sh
 
 
 DEVELOPMENT
